added footer to index page

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 </div>
             </div>
         </div>
-        <div class="container bg-light mt-3">
+        <div class="container bg-light mt-3 border">
             <div class="row">
                 <div class="col-12 p-3">
                     <h3>About Me</h3>
                 </div>
             </div>
-            <div class="row float-left">
+            <div class="row">
                 <div class="col-12 col-md-6">
                     <img src="./Images/Pat.png" class="img-fluid" alt="Responsive image">
                 </div>
@@ -49,12 +49,11 @@
                 </div>
             </div>
         </div>
-        <footer class="footer mt-auto py-3">
-            <div class="container">
-                <span class="text-muted"></span>
-                Copyright
-            </div>
-        </footer>
+    </div>
+    <div class="nav fixed-bottom bg-secondary border-top border-info">
+        <div class="container text-center text-light">
+            Copyright
+        </div>
     </div>
 </body>
 </html>
