added images for portfolio page, created html for portfolio page

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                     <div class="col-12 col-md-8 col-lg-9 d-flex justify-content-center justify-content-md-end">
                         <div class="row">
                             <div class="col-4 col-md-4 text-center">
-                                About
+                                <a style="text-decoration:none" href="index.html"> About </a>
                             </div>
                             <div class="col-4 col-md-4 text-center">
-                                Portfolio
+                                <a style="text-decoration:none" href="portfolio.html"> Portfolio </a>
                             </div>
                             <div class="col-4 col-md-4 text-center">
-                                Contact
+                                <a style="text-decoration:none" href="contact.html"> Contact </a>
                             </div>
                         </div>
                     </div>
