--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
                     </div>
                     <div class="col-12 col-md-8 col-lg-9 d-flex justify-content-center justify-content-md-end">
                         <div class="row">
-                            <div class="col-4 col-md-4 text-center">
+                            <div class="col-4 col-md-4 text-center align-middle">
                                 <a style="text-decoration:none" href="index.html"> About </a>
                             </div>
-                            <div class="col-4 col-md-4 text-center">
+                            <div class="col-4 col-md-4 text-center align-middle">
                                 <a style="text-decoration:none" href="portfolio.html"> Portfolio </a>
                             </div>
-                            <div class="col-4 col-md-4 text-center">
+                            <div class="col-4 col-md-4 text-center align-middle">
                                 <a style="text-decoration:none" href="contact.html"> Contact </a>
                             </div>
                         </div>
