added personal description and filled ini README

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 </div>
                 <div class="col-12 col-md-6 float-left">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at bibendum tortor. Proin auctor quis nunc dictum ultrices. Vestibulum vel dictum tortor. Praesent diam nibh, pharetra vel diam vitae, semper varius leo. Nullam ultrices eu lectus sit amet venenatis. Morbi vel dui ac metus hendrerit lobortis vel sed nulla. Fusce at enim non magna ultrices dictum. Nulla a venenatis nibh. Integer posuere, ipsum at luctus pharetra, libero metus aliquam odio, et hendrerit risus arcu vel magna. Nam quis laoreet ante. Quisque accumsan augue at nunc rhoncus tempus.
+                        My name is Patrick Abromeit and I was born in Toronto, Canada. I hold a business degree from Western University and have worked in finance for the last 5 years. One of the years I worked in Frankfurt, Germany and the subsqeuent 4 years in Toronto. I dabbled in coding on the job and my interest has grown every since, so much so that I enrolled in the UofT SCS Coding Bootcamp to expand my programming knowledge. Subsequent to completion of the course, I will pursue a career as a software developer in Toronto.
                     </p>
                     <p>
-                        In hac habitasse platea dictumst. Sed luctus, ipsum eu ornare condimentum, odio diam dictum purus, hendrerit scelerisque urna nisl eget dolor. Maecenas id blandit arcu. Nulla sapien nibh, venenatis sed nunc ut, maximus pellentesque sem. Donec finibus, dolor eu mollis venenatis, leo lorem posuere lectus, vitae molestie eros odio at nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent sem ex, fringilla in velit at, aliquet posuere turpis. Phasellus congue dui sit amet justo semper, eu pretium ex porta. Nullam faucibus eget ipsum quis aliquam. Fusce vulputate mollis enim, ac iaculis velit posuere non. Vestibulum fermentum orci ligula, eu malesuada nulla sollicitudin a. Nulla vel suscipit libero, eget sagittis lectus. Sed condimentum ornare sapien, ut suscipit odio malesuada quis.
+                        My hobbies include tennis, skiing, and travelling (when I get the chance).
                     </p>
                 </div>
             </div>
